[package]
name = "bevy_a11y"
version = "0.12.0"
edition = "2021"
description = "Provides accessibility support for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "accessibility", "a11y"]

[features]
default = ["std", "bevy_app/bevy_reflect"]
std = ["bevy_app/std", "bevy_ecs/std"]
no_std = ["bevy_app/no_std", "bevy_derive/no_std", "bevy_ecs/no_std", "rclite"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", default-features = false, version = "0.12.0" }
bevy_derive = { path = "../bevy_derive", default-features = false, version = "0.12.0" }
bevy_ecs = { path = "../bevy_ecs", default-features = false, version = "0.12.0" }
rclite = { version = "0.2.4", optional = true }

accesskit = "0.12"

[lints]
workspace = true
