[package]
name = "bevy_app"
version = "0.12.0"
edition = "2021"
description = "Provides core App functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
bevy_ci_testing = ["serde", "ron"]
default = ["bevy_reflect", "std"]
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]
std = [
  "bevy_ecs/std",
  "bevy_utils/std",
  "bevy_reflect?/std",
  "bevy_tasks/std",

  "serde/std",
  "thiserror/std",
]

[dependencies]
# bevy
bevy_derive = { path = "../bevy_derive", version = "0.12.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.12.0", default-features = false }
bevy_reflect = { path = "../bevy_reflect", default-features = false, version = "0.12.0", optional = true }
bevy_utils = { path = "../bevy_utils", default-features = false, version = "0.12.0" }
bevy_tasks = { path = "../bevy_tasks", default-features = false, version = "0.12.0" }

# other
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
ron = { version = "0.8.0", optional = true }
downcast-rs = "1.2.0"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Window"] }

[lints]
workspace = true
