[package]
name = "bevy_core"
version = "0.12.0"
edition = "2021"
description = "Provides core functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]


[dependencies]
# bevy
bevy_app = { path = "../bevy_app", default-features = false, version = "0.12.0" }
bevy_ecs = { path = "../bevy_ecs", default-features = false, version = "0.12.0" }
bevy_math = { path = "../bevy_math", default-features = false, version = "0.12.0" }
bevy_reflect = { path = "../bevy_reflect", default-features = false, version = "0.12.0", features = [
  "bevy",
], optional = true }
bevy_tasks = { path = "../bevy_tasks", default-features = false, version = "0.12.0" }
bevy_utils = { path = "../bevy_utils", default-features = false, version = "0.12.0" }

# other
bytemuck = "1.5"
serde = { version = "1.0", default-features = false, optional = true }

[features]
serialize = ["dep:serde"]
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect", "bevy_app/bevy_reflect"]
default = ["std", "bevy_reflect"]
std = [
  "bevy_app/std",
  "bevy_ecs/std",
  "bevy_math/std",
  "bevy_tasks/std",
  "bevy_utils/std",

  "serde?/std",
]

[dev-dependencies]
crossbeam-channel = "0.5.0"

[lints]
workspace = true
