[package]
name = "bevy_ecs"
version = "0.12.0"
edition = "2021"
description = "Bevy Engine's entity component system"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[features]
trace = []
multi-threaded = ["bevy_tasks/multi-threaded"]
default = ["std", "bevy_reflect"]
std = [
  "bevy_utils/std",

  "downcast-rs/std",
  "fixedbitset/std",
  "serde/std",
  "thiserror/std",
  "thread_local",
  "rustc-hash",
  "async-channel/std",
]
no_std = ["bevy_ecs_macros/no_std", "rclite", "bevy_utils/no_std"]

[dependencies]
bevy_ptr = { path = "../bevy_ptr", version = "0.12.0" }
bevy_reflect = { path = "../bevy_reflect", version = "0.12.0", optional = true }
bevy_tasks = { path = "../bevy_tasks", version = "0.12.0", optional = true }
bevy_utils = { path = "../bevy_utils", version = "0.12.0", default-features = false }
bevy_ecs_macros = { path = "macros", version = "0.12.0" }

async-channel = { version = "2.1", default-features = false }
event-listener = "2.5"
thread_local = { version = "1.1.4", optional = true }
fixedbitset = { version = "0.4.2", default-features = false }
rustc-hash = { version = "1.1", optional = true }
downcast-rs = { version = "1.2", default-features = false }
serde = { version = "1", default-features = false }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
rclite = { version = "0.2.4", optional = true }

[dev-dependencies]
rand = "0.8"

[[example]]
name = "events"
path = "examples/events.rs"

[[example]]
name = "resources"
path = "examples/resources.rs"

[[example]]
name = "change_detection"
path = "examples/change_detection.rs"

[lints]
workspace = true
