[package]
name = "bevy_hierarchy"
version = "0.12.0"
edition = "2021"
description = "Provides hierarchy functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["std", "bevy_app"]
trace = []
bevy_app = ["reflect", "dep:bevy_app", "bevy_core", "bevy_log"]
reflect = [
  "bevy_app/bevy_reflect",
  "bevy_core/bevy_reflect",
  "bevy_ecs/bevy_reflect",
  "bevy_reflect",
]

std = [
  "bevy_app?/std",
  "bevy_core?/std",
  "bevy_ecs/std",
  "bevy_log?/std",
  "bevy_reflect?/std",
  "bevy_utils/std",
]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", default-features = false, version = "0.12.0", optional = true }
bevy_core = { path = "../bevy_core", default-features = false, version = "0.12.0", optional = true }
bevy_ecs = { path = "../bevy_ecs", default-features = false, version = "0.12.0" }
bevy_log = { path = "../bevy_log", default-features = false, version = "0.12.0", optional = true }
bevy_reflect = { path = "../bevy_reflect", default-features = false, version = "0.12.0", features = [
  "bevy",
], optional = true }
bevy_utils = { path = "../bevy_utils", default-features = false, version = "0.12.0" }

[lints]
workspace = true
