[package]
name = "bevy_input"
version = "0.12.0"
edition = "2021"
description = "Provides input functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["std"]
serialize = ["serde"]
std = [
  "bevy_app/std",
  "bevy_ecs/std",
  "bevy_math/std",
  "bevy_utils/std",
  "bevy_reflect/std",

  "serde/std",
  "thiserror/std",
]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", default-features = false, version = "0.12.0" }
bevy_ecs = { path = "../bevy_ecs", default-features = false, version = "0.12.0" }
bevy_math = { path = "../bevy_math", default-features = false, version = "0.12.0" }
bevy_utils = { path = "../bevy_utils", default-features = false, version = "0.12.0" }
bevy_reflect = { path = "../bevy_reflect", default-features = false, version = "0.12.0", features = [
  "glam",
] }

# other
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[dev-dependencies]
bevy = { path = "../../", version = "0.12.0" }

[lints]
workspace = true
