[package]
name = "bevy_log"
version = "0.12.0"
edition = "2021"
description = "Provides logging for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["std"]
trace = ["tracing-error"]
trace_tracy_memory = ["dep:tracy-client"]
std = [
  "bevy_app/std",
  "bevy_utils/std",
  "bevy_ecs/std",
  "tracing-subscriber/std",
  "tracing-log/std",
]
bevy_reflect = ["bevy_app/bevy_reflect", "bevy_ecs/bevy_reflect"]
alloc = ["tracing-subscriber/alloc"]

[dependencies]
bevy_app = { path = "../bevy_app", default_features = false, version = "0.12.0" }
bevy_utils = { path = "../bevy_utils", default_features = false, version = "0.12.0" }
bevy_ecs = { path = "../bevy_ecs", default_features = false, version = "0.12.0" }

tracing-subscriber = { version = "0.3.1", default-features = false, features = [
  "registry",
  "env-filter",
  "smallvec",
  "fmt",
  "ansi",
  "tracing-log",
] }
tracing-chrome = { version = "0.7.0", optional = true }
tracing-tracy = { version = "0.10.0", optional = true }
tracing-log = {version = "0.2", default-features = false, features = ["log-tracer"] }
tracing-error = { version = "0.2.0", optional = true }
tracy-client = { version = "0.16", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"

[lints]
workspace = true
