[package]
name = "bevy_macro_utils"
version = "0.12.0"
edition = "2021"
description = "A collection of utils for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
toml_edit = { version = "0.20", optional = true }
syn = "2.0"
quote = "1.0"
rustc-hash = { version = "1.0", optional = true }
proc-macro2 = "1.0"
hashbrown = { version = "0.14", features = [], optional = true }
ahash = { version = "0.8.3", default-features = false, optional = true }

[features]
std = ["toml_edit", "rustc-hash"]
no_std = ["hashbrown", "ahash"]

[lints]
workspace = true
