[package]
name = "bevy_reflect"
version = "0.12.0"
edition = "2021"
description = "Dynamically interact with rust types"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]
readme = "README.md"

[features]
default = ["std"]
# When enabled, provides Bevy-related reflection implementations
bevy = ["glam", "smallvec", "bevy_math", "smol_str"]
smallvec = []
# When enabled, allows documentation comments to be accessed via reflection
documentation = ["bevy_reflect_derive/documentation"]
std = [
  "bevy_math/std",
  "bevy_reflect_derive/std",
  "bevy_utils/std",
  "thiserror/std",

  "smol_str?/std",
  "glam?/std",
  "serde/std",
  "erased-serde/std",
  "thiserror/std",
]

[dependencies]
# bevy
bevy_math = { path = "../bevy_math", version = "0.12.0", features = [
  "serialize",
], optional = true }
bevy_reflect_derive = { path = "bevy_reflect_derive", default-features = false, version = "0.12.0" }
bevy_utils = { path = "../bevy_utils", default-features = false, version = "0.12.0" }
bevy_ptr = { path = "../bevy_ptr", version = "0.12.0" }

# other
erased-serde = { version = "0.3", default-features = false }
downcast-rs = "1.2"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
serde = { version = "1", default-features = false }

glam = { version = "0.24.1", default-features = false, features = ["serde"], optional = true }
smol_str = { version = "0.2.0", default-features = false, optional = true }

[dev-dependencies]
ron = "0.8.0"
rmp-serde = "1.1"
bincode = "1.3"
serde_json = { version = "0.5.1", package = "serde-json-core", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

[[example]]
name = "reflect_docs"
path = "examples/reflect_docs.rs"
required-features = ["documentation"]

[lints]
workspace = true
