[package]
name = "bevy_tasks"
version = "0.12.0"
edition = "2021"
description = "A task executor for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
multi-threaded = []
thread_local_exp = []

[dependencies]
async-executor = { version = "1.7.2", default-features = false }
async-channel = "1.4.2"
async-io = { version = "2.0.0", optional = true }
rclite = { version = "0.2.4", optional = true }
async-task = "4.2.0"
concurrent-queue = "2.0.0"
once_cell = { version = "1.19.0", default-features = false, features = ["critical-section"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
web-time = { version = "0.2" }

[lints]
workspace = true
