[package]
name = "bevy_time"
version = "0.12.0"
edition = "2021"
description = "Provides time functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["std"]
serialize = ["serde"]
bevy_ci_testing = ["bevy_app/bevy_ci_testing"]
std = [
  "bevy_app/std",
  "bevy_ecs/std",
  "bevy_utils/std",

  "crossbeam-channel",
  "serde/std",
  "thiserror/std",
]
bevy_reflect = ["dep:bevy_reflect", "bevy_app/bevy_reflect", "bevy_ecs/bevy_reflect"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", default-features = false, version = "0.12.0" }
bevy_ecs = { path = "../bevy_ecs", default-features = false, version = "0.12.0" }
bevy_reflect = { path = "../bevy_reflect", version = "0.12.0", features = [
  "bevy",
], optional = true }
bevy_utils = { path = "../bevy_utils", default-features = false, version = "0.12.0" }

# other
crossbeam-channel = { version = "0.5.0", optional = true }
thingbuf = { version = "0.1", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[lints]
workspace = true
