[package]
name = "bevy_utils"
version = "0.12.0"
edition = "2021"
description = "A collection of utils for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
detailed_trace = []
default = ["std"]
std = [
  "ahash/std",
  "tracing/std",
  "thiserror/std",
  "uuid/std",
  "petgraph/std",
  "nonmax/std",
  "web-time",
]
once_cell = ["dep:once_cell", "dep:spin"]
no_std = ["once_cell", "instant"]

[dependencies]
ahash = { version = "0.8.3", default-features = false, features = ["compile-time-rng"] }
tracing = { version = "0.1", default-features = false }
web-time = { version = "0.2", optional = true }
instant = { version = "0.1", path = "../../../instant", optional = true, default-features = false }
uuid = { version = "1.1", default-features = false, features = ["v4", "serde"] }
hashbrown = { version = "0.14", features = [] }
bevy_utils_proc_macros = { version = "0.12.0", path = "macros" }
petgraph = { path = "../../../petgraph", default-features = false, features = ["no_std", "graphs"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
nonmax = { version = "0.5", default-features = false }
smallvec = { version = "1.11", features = ["union", "const_generics"] }
once_cell = { version = "1.19.0", default-features = false, features = ["alloc", "critical-section"], optional = true }
spin = { version = "0.9", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.0", features = ["js"] }

[lints]
workspace = true
