[package]
name = "bevy_window"
version = "0.12.0"
edition = "2021"
description = "Provides windowing functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["std", "bevy_app/bevy_reflect"]
serialize = ["serde", "smol_str/serde"]
std = [
  "bevy_a11y/std",
  "bevy_app/std",
  "bevy_ecs/std",
  "bevy_math/std",
  "bevy_utils/std",
  "bevy_input/std",

  "serde?/std",
  "smol_str/std",
  "bevy_a11y",
]
bevy_reflect = [
  "dep:bevy_reflect",
  "bevy_app/bevy_reflect",
  "bevy_ecs/bevy_reflect",
]

[dependencies]
# bevy
bevy_a11y = { path = "../bevy_a11y", default-features = false, optional = true, version = "0.12.0" }
bevy_app = { path = "../bevy_app", default-features = false, version = "0.12.0" }
bevy_ecs = { path = "../bevy_ecs", default-features = false, version = "0.12.0" }
bevy_math = { path = "../bevy_math", default-features = false, version = "0.12.0" }
bevy_reflect = { path = "../bevy_reflect", default-features = false, version = "0.12.0", features = [
  "glam",
], optional = true }
bevy_utils = { path = "../bevy_utils", default-features = false, version = "0.12.0" }
# Used for close_on_esc
bevy_input = { path = "../bevy_input", default-features = false, version = "0.12.0" }

# other
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
raw-window-handle = "0.5"
smol_str = { version = "0.2", default-features = false }

[lints]
workspace = true
